# calculatorWithoutInt

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
1-9/: main.py
math_0_9/: main.py
math_0_infinity/: main.py
math_without_integers/: __init__.py  example_zero_to_infinity.py  example_zero_to_nine.py  zero_to_infinity.md  zero_to_infinity.py  zero_to_nine.md  zero_to_nine.py
