[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_without_integers"
version = "0.1.0"
description = "Arithmetic operations without using integers at all"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "AGPL-3.0"}
authors = [
  {name = "First-Non-Interesting-Username", email = "janekmusin@proton.me"}
]